@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 13-12-2005 fixed: DVD Folders weren't being stacked.
+ - 13-12-2005 fixed: Buttonscroller backwards compatibility for v1.3 skins.
+ - 13-12-2005 changed: timers for effects are started at render time, rather than at window creation.
  - 13-12-2005 fixed: selecting unrarred vobsubs using browse for subtitle.
  - 13-12-2005 fixed: auto game region would apply even with setting off in some cases.
  - 12-12-2005 added: allowHiddenFocus attribute to visibility tags.  See online manual for more info.
